[package]
name = "lwoss"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
futures = "0.3"
tempfile = "3"
toml = "0.7"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
axum = { version="0.6", features = ["http2"]}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.1.8", features = ["derive"] }
