[package]
name = "lwoss"
description = "Lightweight object storage service."
authors = ["Kaciras <kaciras@outlook.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
futures = "0.3"
tempfile = "3"
toml = "0.7"
cookie = "0.17"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
axum = { version = "0.6", features = ["http2"] }
axum-extra = { version = "0.7", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.4", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
diesel = { version = "2", features = ["sqlite"] }
